--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express-session": "^1.17.3",
     "log4js": "^6.5.2",
     "momnet": "^2.29.1",
+    "minimist": "^1.2.6",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.7.7",
     "passport": "^0.6.0",
